# codex_skill_manager

./: .gitignore  LICENSE.md  README.md  package.json
.github/workflows/: ci.yml  release.yml
apps/desktop/: README.md  nuxt.config.ts  package-lock.json  package.json  vitest.config.ts
apps/desktop/frontend/assets/css/: main.css
apps/desktop/frontend/composables/: useSkillsManager.ts
apps/desktop/frontend/pages/: index.vue
apps/desktop/frontend/services/: tauri.ts
apps/desktop/frontend/tests/: setup.ts  useSkillsManager.spec.ts
apps/desktop/frontend/types/: contracts.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: commands.rs  conflict.rs  creation.rs  domain.rs  executor.rs  lib.rs  list.rs  main.rs  mod.rs  operation_manager.rs  paths.rs  planner.rs  platform.rs  skill_slug.rs
apps/desktop/src-tauri/src/pdf_engine/: chunker.rs  extractor.rs  metadata.rs  mod.rs  scan.rs  skill_writer.rs  slug.rs  types.rs
