[package]
name = "codex-skill-manager-desktop"
version = "0.1.0"
description = "Desktop manager for Codex skills"
authors = ["codex"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
dirs = "5.0"
once_cell = "1.20"
uuid = { version = "1.11", features = ["v4", "serde"] }
lopdf = "0.40"
regex = "1.11"
rfd = "0.15"

[features]
default = []

[dev-dependencies]
tempfile = "3.12"
